feat: complete Admin Panel i18n and v4.0.0-pre-RC.2 release
- Full internationalization of Admin Panel (EN, RU, UK)
- Added Admin Panel dashboard, user management, game monitoring, and system logs
- Fixed lobby joining race conditions and direct URL reconnection logic
- Improved server-side error handling for game room status
- Integrated Pinia admin store and localized toast/modal systems
- Updated version to 4.0.0-pre-RC.2

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -235,6 +235,8 @@
   "error_chat_auth_required": "⚠️ Login required to chat.",
   "error_chat_muted": "🔇 You are muted in chat.",
   "error_chat_spam_wait": "Too fast! Please wait {seconds} seconds.",
+  "chat_cooldown_wait": "Wait {seconds}s",
+  "chat_cooldown_limit": "Limit: {seconds}s",
   "close_chat_button": "Close Chat",
   "edited_tag": "(edited)",
   "save_button": "Save",
@@ -292,5 +294,130 @@
   "admin_ban_permanent": "Ban (Forever)",
   "admin_ban_custom": "Ban (Custom)",
   "admin_mute_custom": "Mute (Custom)",
-  "prompt_minutes": "Enter duration in minutes:"
+  "prompt_minutes": "Enter duration in minutes:",
+  "ban_reason_not_specified": "Not specified",
+  "unknown_reason": "Unknown reason",
+  "admin_nav_dashboard": "Dashboard",
+  "admin_nav_users": "Users",
+  "admin_nav_games": "Games",
+  "admin_nav_donations": "Stars Revenue",
+  "admin_nav_system": "Server State",
+  "admin_nav_audit": "Audit Log",
+  "admin_nav_maintenance": "Maintenance",
+  "admin_nav_back_to_game": "Back to Game",
+  "admin_dashboard_title": "Control Panel",
+  "admin_live_overview": "Live Overview",
+  "admin_system_status": "System Status:",
+  "admin_operational": "Operational",
+  "admin_stat_total_users": "Total Users",
+  "admin_stat_active_games": "Active Games",
+  "admin_stat_online_users": "Online Users",
+  "admin_stat_games_today": "Games Today",
+  "admin_chart_reg_traffic": "Registration Traffic",
+  "admin_chart_daily_users": "Daily new users over requested period",
+  "admin_period_7d": "Last 7 Days",
+  "admin_period_30d": "Last 30 Days",
+  "admin_welcome_text": "Welcome back to the command center. Monitor your game server performance and handle player issues from here.",
+  "admin_quick_actions": "Quick Actions",
+  "admin_quick_find_user": "Find User",
+  "admin_quick_broadcast": "Broadcast",
+  "admin_user_management": "User Management",
+  "admin_search_placeholder": "Search by username or ID...",
+  "admin_table_user": "User",
+  "admin_table_stats": "Stats",
+  "admin_table_status": "Status",
+  "admin_table_actions": "Actions",
+  "admin_user_wins": "Wins",
+  "admin_user_losses": "Losses",
+  "admin_user_coins": "Coins",
+  "admin_status_banned": "Banned",
+  "admin_status_muted": "Muted",
+  "admin_status_active": "Active",
+  "admin_audit_time": "Time",
+  "admin_audit_admin": "Admin",
+  "admin_audit_action": "Action",
+  "admin_audit_target": "Target",
+  "admin_audit_details": "Details",
+  "admin_audit_total": "Total: {count} entries",
+  "admin_games_activity": "Activity",
+  "admin_games_active_title": "Active Games",
+  "admin_games_lobby": "{name}'s Lobby",
+  "admin_games_players": "Players:",
+  "admin_games_no_active": "No active games right now",
+  "admin_games_recent": "Recent Games",
+  "admin_table_id_type": "ID / Type",
+  "admin_table_duration": "Duration",
+  "admin_table_result": "Result",
+  "admin_game_winner": "Winner: {name}",
+  "admin_game_loser": "Loser: {name}",
+  "admin_game_draw": "Draw",
+  "admin_status_finished": "Finished",
+  "admin_no_game_history": "No game history found",
+  "admin_total_games": "Total: {count} games",
+  "admin_system_infrastructure": "Infrastructure",
+  "admin_system_active_sockets": "Active Sockets",
+  "admin_system_authenticated": "Authenticated",
+  "admin_table_socket_id": "Socket ID",
+  "admin_table_ip": "IP Address",
+  "admin_table_device": "Browser / Device",
+  "admin_finances_title": "Finances",
+  "admin_total_stars": "Total Stars",
+  "admin_table_tx_id": "Transaction ID",
+  "admin_table_reward": "Reward",
+  "admin_stars_purchase": "Stars Purchase",
+  "admin_no_donations_found": "No donation records found",
+  "admin_total_records": "Total: {count} records",
+  "admin_maint_priority": "High Priority",
+  "admin_maint_mode": "Maintenance Mode",
+  "admin_maint_desc": "Restrict regular users and guest access. Active games can be scheduled to finish before lockdown.",
+  "admin_label_display_msg": "Display Message",
+  "admin_label_mins_lock": "Minutes Until Lock",
+  "admin_btn_initiate_lockdown": "INITIATE LOCKDOWN",
+  "admin_active_notice": "Active Notice",
+  "admin_btn_restore_access": "RESTORE ACCESS",
+  "admin_global_broadcast": "Global Broadcast",
+  "admin_broadcast_desc": "Dispatch an urgent notification to every connected client worldwide.",
+  "admin_label_announcement": "Announcement",
+  "admin_placeholder_citizens": "Citizens of Durak...",
+  "admin_btn_send_signal": "SEND SIGNAL",
+  "admin_modal_edit_user": "Edit User",
+  "admin_modal_action_reason": "Action Reason",
+  "admin_modal_enter_reason_for": "Enter reason for {action}:",
+  "admin_toast_maint_enabled": "Maintenance enabled successfully",
+  "admin_toast_maint_fail": "Failed to enable maintenance",
+  "admin_toast_access_restored": "Access restored",
+  "admin_toast_maint_off_fail": "Failed to disable maintenance",
+  "admin_toast_broadcast_sent": "Broadcast signal sent!",
+  "admin_toast_broadcast_fail": "Failed to send broadcast",
+  "admin_toast_socket_disconnected": "Socket disconnected successfully",
+  "admin_toast_socket_fail": "Failed to disconnect socket",
+  "admin_toast_action_success": "Action successful",
+  "admin_toast_action_fail": "Failed to perform action",
+  "admin_toast_game_terminated": "Game terminated",
+  "admin_toast_game_term_fail": "Failed to terminate game",
+  "admin_toast_user_updated": "User updated successfully",
+  "admin_role_administrator": "Administrator",
+  "admin_status_guest": "Guest",
+  "admin_status_user": "User",
+  "admin_btn_spectate": "Spectate",
+  "admin_btn_kick": "Kick",
+  "admin_status_verified": "Verified",
+  "admin_status_admin": "Admin",
+  "admin_label_action_reason": "Action Reason",
+  "admin_btn_save_changes": "SAVE CHANGES",
+  "admin_processing": "PROCESS...",
+  "admin_chart_users": "users",
+  "btn_cancel": "Cancel",
+  "btn_confirm": "Confirm",
+  "btn_continue": "Continue",
+  "btn_prev": "Prev",
+  "btn_next": "Next",
+  "admin_verify_user": "Verify User",
+  "admin_unverify_user": "Unverify User",
+  "admin_temp_ban_user": "Temp Ban User",
+  "admin_perm_ban_user": "Permanent Ban User",
+  "admin_unban_user": "Unban User",
+  "admin_temp_mute_user": "Temp Mute User",
+  "admin_perm_mute_user": "Permanent Mute User",
+  "admin_unmute_user": "Unmute User"
 }
