--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -234,6 +234,8 @@
   "error_chat_auth_required": "⚠️ Требуется авторизация для чата.",
   "error_chat_muted": "🔇 Ваш чат заблокирован.",
   "error_chat_spam_wait": "Слишком часто! Подождите {seconds} сек.",
+  "chat_cooldown_wait": "Ждите {seconds}с",
+  "chat_cooldown_limit": "Лимит: {seconds}с",
   "close_chat_button": "Закрыть чат",
   "edited_tag": "(ред.)",
   "save_button": "Сохранить",
@@ -291,5 +293,130 @@
   "admin_ban_permanent": "Бан (Навсегда)",
   "admin_ban_custom": "Бан (свое время)",
   "admin_mute_custom": "Мут (свое время)",
-  "prompt_minutes": "Введите количество минут:"
+  "prompt_minutes": "Введите количество минут:",
+  "ban_reason_not_specified": "Не указана",
+  "unknown_reason": "Неизвестная причина",
+  "admin_nav_dashboard": "Дашборд",
+  "admin_nav_users": "Пользователи",
+  "admin_nav_games": "Игры",
+  "admin_nav_donations": "Доход (Stars)",
+  "admin_nav_system": "Состояние сервера",
+  "admin_nav_audit": "Лог аудита",
+  "admin_nav_maintenance": "Техработы",
+  "admin_nav_back_to_game": "Вернуться в игру",
+  "admin_dashboard_title": "Панель управления",
+  "admin_live_overview": "Живой обзор",
+  "admin_system_status": "Статус системы:",
+  "admin_operational": "Работает",
+  "admin_stat_total_users": "Всего пользователей",
+  "admin_stat_active_games": "Активных игр",
+  "admin_stat_online_users": "Онлайн пользователи",
+  "admin_stat_games_today": "Игр сегодня",
+  "admin_chart_reg_traffic": "Трафик регистраций",
+  "admin_chart_daily_users": "Новые пользователи за выбранный период",
+  "admin_period_7d": "Последние 7 дней",
+  "admin_period_30d": "Последние 30 дней",
+  "admin_welcome_text": "Добро пожаловать в центр управления. Здесь вы можете следить за производительностью игрового сервера и решать проблемы игроков.",
+  "admin_quick_actions": "Быстрые действия",
+  "admin_quick_find_user": "Найти игрока",
+  "admin_quick_broadcast": "Объявление",
+  "admin_user_management": "Управление пользователями",
+  "admin_search_placeholder": "Поиск по нику или ID...",
+  "admin_table_user": "Игрок",
+  "admin_table_stats": "Статистика",
+  "admin_table_status": "Статус",
+  "admin_table_actions": "Действия",
+  "admin_user_wins": "Победы",
+  "admin_user_losses": "Поражения",
+  "admin_user_coins": "Монеты",
+  "admin_status_banned": "Забанен",
+  "admin_status_muted": "В муте",
+  "admin_status_active": "Активен",
+  "admin_audit_time": "Время",
+  "admin_audit_admin": "Админ",
+  "admin_audit_action": "Действие",
+  "admin_audit_target": "Цель",
+  "admin_audit_details": "Детали",
+  "admin_audit_total": "Всего: {count} записей",
+  "admin_games_activity": "Активность",
+  "admin_games_active_title": "Активные игры",
+  "admin_games_lobby": "Лобби {name}",
+  "admin_games_players": "Игроки:",
+  "admin_games_no_active": "Сейчас нет активных игр",
+  "admin_games_recent": "Недавние игры",
+  "admin_table_id_type": "ID / Тип",
+  "admin_table_duration": "Длительность",
+  "admin_table_result": "Результат",
+  "admin_game_winner": "Победитель: {name}",
+  "admin_game_loser": "Проигравший: {name}",
+  "admin_game_draw": "Ничья",
+  "admin_status_finished": "Завершена",
+  "admin_no_game_history": "История игр не найдена",
+  "admin_total_games": "Всего: {count} игр",
+  "admin_system_infrastructure": "Инфраструктура",
+  "admin_system_active_sockets": "Активные сокеты",
+  "admin_system_authenticated": "Авторизовано",
+  "admin_table_socket_id": "Socket ID",
+  "admin_table_ip": "IP-адрес",
+  "admin_table_device": "Браузер / Устройство",
+  "admin_finances_title": "Финансы",
+  "admin_total_stars": "Всего звёзд",
+  "admin_table_tx_id": "ID транзакции",
+  "admin_table_reward": "Награда",
+  "admin_stars_purchase": "Покупка звёзд",
+  "admin_no_donations_found": "Записей о донатах не найдено",
+  "admin_total_records": "Всего: {count} записей",
+  "admin_maint_priority": "Высокий приоритет",
+  "admin_maint_mode": "Режим техработ",
+  "admin_maint_desc": "Ограничение доступа для обычных пользователей и гостей. Активным играм будет дано время на завершение перед блокировкой.",
+  "admin_label_display_msg": "Сообщение для отображения",
+  "admin_label_mins_lock": "Минут до блокировки",
+  "admin_btn_initiate_lockdown": "НАЧАТЬ ТЕХРАБОТЫ",
+  "admin_active_notice": "Активное уведомление",
+  "admin_btn_restore_access": "ВОССТАНОВИТЬ ДОСТУП",
+  "admin_global_broadcast": "Глобальное объявление",
+  "admin_broadcast_desc": "Отправить срочное уведомление всем подключенным клиентам по всему миру.",
+  "admin_label_announcement": "Текст объявления",
+  "admin_placeholder_citizens": "Граждане Дурака...",
+  "admin_btn_send_signal": "ОТПРАВИТЬ СИГНАЛ",
+  "admin_modal_edit_user": "Редактировать игрока",
+  "admin_modal_action_reason": "Причина действия",
+  "admin_modal_enter_reason_for": "Введите причину для {action}:",
+  "admin_toast_maint_enabled": "Режим техработ успешно включен",
+  "admin_toast_maint_fail": "Не удалось включить режим техработ",
+  "admin_toast_access_restored": "Доступ восстановлен",
+  "admin_toast_maint_off_fail": "Не удалось выключить режим техработ",
+  "admin_toast_broadcast_sent": "Объявление отправлено!",
+  "admin_toast_broadcast_fail": "Не удалось отправить объявление",
+  "admin_toast_socket_disconnected": "Сокет успешно отключен",
+  "admin_toast_socket_fail": "Не удалось отключить сокет",
+  "admin_toast_action_success": "Действие успешно выполнено",
+  "admin_toast_action_fail": "Не удалось выполнить действие",
+  "admin_toast_game_terminated": "Игра принудительно завершена",
+  "admin_toast_game_term_fail": "Не удалось завершить игру",
+  "admin_toast_user_updated": "Данные пользователя успешно обновлены",
+  "admin_role_administrator": "Администратор",
+  "admin_status_guest": "Гость",
+  "admin_status_user": "Игрок",
+  "admin_btn_spectate": "Наблюдать",
+  "admin_btn_kick": "Кикнуть",
+  "admin_status_verified": "Проверен",
+  "admin_status_admin": "Админ",
+  "admin_label_action_reason": "Причина действия",
+  "admin_btn_save_changes": "СОХРАНИТЬ ИЗМЕНЕНИЯ",
+  "admin_processing": "ОБРАБОТКА...",
+  "admin_chart_users": "польз.",
+  "btn_cancel": "Отмена",
+  "btn_confirm": "Подтвердить",
+  "btn_continue": "Продолжить",
+  "btn_prev": "Назад",
+  "btn_next": "Вперед",
+  "admin_verify_user": "Подтвердить пользователя",
+  "admin_unverify_user": "Снять подтверждение",
+  "admin_temp_ban_user": "Временный бан",
+  "admin_perm_ban_user": "Перманентный бан",
+  "admin_unban_user": "Разбанить",
+  "admin_temp_mute_user": "Временный мут",
+  "admin_perm_mute_user": "Перманентный мут",
+  "admin_unmute_user": "Размутить"
 }
