--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -234,6 +234,8 @@
   "error_chat_auth_required": "⚠️ Потрібна авторизація для чату.",
   "error_chat_muted": "🔇 Ваш чат заблоковано.",
   "error_chat_spam_wait": "Занадто часто! Зачекайте {seconds} сек.",
+  "chat_cooldown_wait": "Чекайте {seconds}с",
+  "chat_cooldown_limit": "Ліміт: {seconds}с",
   "close_chat_button": "Закрити чат",
   "edited_tag": "(ред.)",
   "save_button": "Зберегти",
@@ -291,5 +293,130 @@
   "admin_ban_permanent": "Бан (Назавжди)",
   "admin_ban_custom": "Бан (свій час)",
   "admin_mute_custom": "Мут (свій час)",
-  "prompt_minutes": "Введіть кількість хвилин:"
+  "prompt_minutes": "Введіть кількість хвилин:",
+  "ban_reason_not_specified": "Не вказана",
+  "unknown_reason": "Невідома причина",
+  "admin_nav_dashboard": "Дашборд",
+  "admin_nav_users": "Користувачі",
+  "admin_nav_games": "Ігри",
+  "admin_nav_donations": "Дохід (Stars)",
+  "admin_nav_system": "Стан сервера",
+  "admin_nav_audit": "Лог аудиту",
+  "admin_nav_maintenance": "Техроботи",
+  "admin_nav_back_to_game": "Повернутися у гру",
+  "admin_dashboard_title": "Панель управління",
+  "admin_live_overview": "Живий огляд",
+  "admin_system_status": "Статус системи:",
+  "admin_operational": "Працює",
+  "admin_stat_total_users": "Всього користувачів",
+  "admin_stat_active_games": "Активних ігор",
+  "admin_stat_online_users": "Онлайн користувачі",
+  "admin_stat_games_today": "Ігор сьогодні",
+  "admin_chart_reg_traffic": "Трафік реєстрацій",
+  "admin_chart_daily_users": "Нові користувачі за обраний період",
+  "admin_period_7d": "Останні 7 днів",
+  "admin_period_30d": "Останні 30 днів",
+  "admin_welcome_text": "Ласкаво просимо до центру управління. Тут ви можете стежити за продуктивністю ігрового сервера та вирішувати проблеми гравців.",
+  "admin_quick_actions": "Швидкі дії",
+  "admin_quick_find_user": "Знайти гравця",
+  "admin_quick_broadcast": "Оголошення",
+  "admin_user_management": "Управління користувачами",
+  "admin_search_placeholder": "Пошук за ніком або ID...",
+  "admin_table_user": "Гравець",
+  "admin_table_stats": "Статистика",
+  "admin_table_status": "Статус",
+  "admin_table_actions": "Дії",
+  "admin_user_wins": "Перемоги",
+  "admin_user_losses": "Поразки",
+  "admin_user_coins": "Монети",
+  "admin_status_banned": "Забанений",
+  "admin_status_muted": "У муті",
+  "admin_status_active": "Активний",
+  "admin_audit_time": "Час",
+  "admin_audit_admin": "Адмін",
+  "admin_audit_action": "Дія",
+  "admin_audit_target": "Ціль",
+  "admin_audit_details": "Деталі",
+  "admin_audit_total": "Всього: {count} записів",
+  "admin_games_activity": "Активність",
+  "admin_games_active_title": "Активні ігри",
+  "admin_games_lobby": "Лобі {name}",
+  "admin_games_players": "Гравці:",
+  "admin_games_no_active": "Зараз немає активних ігор",
+  "admin_games_recent": "Недавні ігри",
+  "admin_table_id_type": "ID / Тип",
+  "admin_table_duration": "Тривалість",
+  "admin_table_result": "Результат",
+  "admin_game_winner": "Переможець: {name}",
+  "admin_game_loser": "Той, хто програв: {name}",
+  "admin_game_draw": "Нічия",
+  "admin_status_finished": "Завершена",
+  "admin_no_game_history": "Історію ігор не знайдено",
+  "admin_total_games": "Всього: {count} ігор",
+  "admin_system_infrastructure": "Інфраструктура",
+  "admin_system_active_sockets": "Активні сокети",
+  "admin_system_authenticated": "Авторизовано",
+  "admin_table_socket_id": "Socket ID",
+  "admin_table_ip": "IP-адреса",
+  "admin_table_device": "Браузер / Пристрій",
+  "admin_finances_title": "Фінанси",
+  "admin_total_stars": "Всього зірок",
+  "admin_table_tx_id": "ID транзакції",
+  "admin_table_reward": "Награда",
+  "admin_stars_purchase": "Купівля зірок",
+  "admin_no_donations_found": "Записів про донати не знайдено",
+  "admin_total_records": "Всього: {count} записів",
+  "admin_maint_priority": "Високий пріоритет",
+  "admin_maint_mode": "Режим техробіт",
+  "admin_maint_desc": "Обмеження доступу для звичайних користувачів та гостей. Активним іграм буде дано час на завершення перед блокуванням.",
+  "admin_label_display_msg": "Повідомлення для відображення",
+  "admin_label_mins_lock": "Хвилин до блокування",
+  "admin_btn_initiate_lockdown": "ПОЧАТИ ТЕХРОБОТИ",
+  "admin_active_notice": "Активне повідомлення",
+  "admin_btn_restore_access": "ВІДНОВИТИ ДОСТУП",
+  "admin_global_broadcast": "Глобальне оголошення",
+  "admin_broadcast_desc": "Надіслати термінове повідомлення усім підключеним клієнтам по всьому світу.",
+  "admin_label_announcement": "Текст оголошення",
+  "admin_placeholder_citizens": "Громадяни Дурня...",
+  "admin_btn_send_signal": "НАДІСЛАТИ СИГНАЛ",
+  "admin_modal_edit_user": "Редагувати гравця",
+  "admin_modal_action_reason": "Причина дії",
+  "admin_modal_enter_reason_for": "Введіть причину для {action}:",
+  "admin_toast_maint_enabled": "Режим техробіт успішно увімкнено",
+  "admin_toast_maint_fail": "Не вдалося увімкнути режим техробіт",
+  "admin_toast_access_restored": "Доступ відновлено",
+  "admin_toast_maint_off_fail": "Не вдалося вимкнути режим техробіт",
+  "admin_toast_broadcast_sent": "Оголошення надіслано!",
+  "admin_toast_broadcast_fail": "Не вдалося надіслати оголошення",
+  "admin_toast_socket_disconnected": "Сокет успішно відключено",
+  "admin_toast_socket_fail": "Не вдалося відключити сокет",
+  "admin_toast_action_success": "Дію успішно виконано",
+  "admin_toast_action_fail": "Не вдалося виконати дію",
+  "admin_toast_game_terminated": "Гру примусово завершено",
+  "admin_toast_game_term_fail": "Не вдалося завершити гру",
+  "admin_toast_user_updated": "Дані користувача успішно оновлені",
+  "admin_role_administrator": "Адміністратор",
+  "admin_status_guest": "Гість",
+  "admin_status_user": "Гравець",
+  "admin_btn_spectate": "Спостерігати",
+  "admin_btn_kick": "Кікнути",
+  "admin_status_verified": "Підтверджений",
+  "admin_status_admin": "Адмін",
+  "admin_label_action_reason": "Причина дії",
+  "admin_btn_save_changes": "ЗБЕРЕГТИ ЗМІНИ",
+  "admin_processing": "ОБРОБКА...",
+  "admin_chart_users": "корист.",
+  "btn_cancel": "Скасувати",
+  "btn_confirm": "Підтвердити",
+  "btn_continue": "Продовжити",
+  "btn_prev": "Назад",
+  "btn_next": "Вперед",
+  "admin_verify_user": "Підтвердити користувача",
+  "admin_unverify_user": "Зняти підтвердження",
+  "admin_temp_ban_user": "Тимчасовий бан",
+  "admin_perm_ban_user": "Перманентний бан",
+  "admin_unban_user": "Розбанити",
+  "admin_temp_mute_user": "Тимчасовий мут",
+  "admin_perm_mute_user": "Перманентний мут",
+  "admin_unmute_user": "Розблокувати чат"
 }
