feat: customizable Quick Game preferences and v4.0.0-pre-RC.3 release
- Added persistent Quick Game preferences (deck size, players, mode, betting)
- Implemented settings UI for quick play defaults with auto-save
- Enhanced matchmaking logic to prioritize user-defined lobby settings
- Updated database schema for SQLite and PostgreSQL with migration support
- Pre-populated lobby creation fields from user preferences
- Updated version to 4.0.0-pre-RC.3

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -419,5 +419,12 @@
   "admin_unban_user": "Unban User",
   "admin_temp_mute_user": "Temp Mute User",
   "admin_perm_mute_user": "Permanent Mute User",
-  "admin_unmute_user": "Unmute User"
+  "admin_unmute_user": "Unmute User",
+  "settings_quick_game_title": "Quick Game Defaults",
+  "settings_quick_deck_size": "Deck Size",
+  "settings_quick_max_players": "Players",
+  "settings_quick_game_mode": "Game Mode",
+  "settings_quick_is_betting": "Betting Game",
+  "settings_quick_bet_amount": "Bet Amount",
+  "settings_saved_success": "Settings saved successfully!"
 }
