feat: hardware ban system & advanced session management
- Implemented Hardware Ban (HWID) system with admin controls.
- Added backend endpoints for banning/unbanning devices and checking ban status.
- Enforced device ban validation during login and session checks.
- Implemented targeted session termination with real-time Socket.io notifications.
- Added protection to prevent admins from terminating their current active session.
- Enhanced Admin Panel UI with device ban status badges and interactive controls.
- Fixed word-wrapping and overflow issues for global broadcasts and toast messages.
- Added comprehensive EN, RU, and UK localization for new security features.
- Bumped project version to 4.0.0-pre-RC.4.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -426,5 +426,58 @@
   "settings_quick_game_mode": "Game Mode",
   "settings_quick_is_betting": "Betting Game",
   "settings_quick_bet_amount": "Bet Amount",
-  "settings_saved_success": "Settings saved successfully!"
+  "settings_saved_success": "Settings saved successfully!",
+  "settings_active_sessions": "Active Sessions",
+  "sessions_modal_title": "Active Sessions",
+  "session_current": "Current Session",
+  "session_device": "Device",
+  "session_location": "Location",
+  "session_ip": "IP Address",
+  "session_last_active": "Last Active",
+  "session_terminate": "Terminate",
+  "session_confirm_terminate": "Are you sure you want to terminate this session?",
+  "error_session_terminate_too_new": "New sessions cannot terminate older sessions.",
+  "session_terminated_success": "Session terminated successfully",
+  "session_details_title": "Session Details",
+  "session_browser": "Browser",
+  "session_os": "System",
+  "session_created_at": "Logged In",
+  "admin_nav_devices": "Devices",
+  "admin_user_sessions": "User Sessions",
+  "admin_device_details": "Device Details",
+  "admin_device_model": "Model",
+  "admin_platform_version": "OS Version",
+  "admin_is_mobile": "Mobile",
+  "admin_login_count": "Logins",
+  "admin_first_seen": "First Seen",
+  "admin_last_seen": "Last Seen",
+  "admin_associated_users": "Associated Accounts",
+  "admin_terminate_session_confirm": "Are you sure you want to forcibly terminate this session?",
+  "admin_toast_session_terminated": "Session terminated",
+  "admin_view_sessions": "Sessions",
+  "admin_view_device": "Device",
+  "admin_mismatch_title": "Oops, what's this?",
+  "admin_mismatch_desc": "The '{tab}' tab is not yet implemented or is under development.",
+  "admin_btn_take_home": "Back to Home",
+  "admin_modal_title": "Admin Panel",
+  "admin_clones_title": "Multi-accounts",
+  "admin_clones_subtitle": "Devices used by more than one registered account.",
+  "admin_btn_details": "DETAILS",
+  "admin_btn_go_to_user": "GO TO USER",
+  "admin_clones_not_found": "No multi-accounts detected",
+  "admin_raw_user_agent": "RAW USER-AGENT",
+  "admin_user_rating": "Rating",
+  "admin_broadcast_type_info": "Info",
+  "admin_broadcast_type_success": "Success",
+  "admin_broadcast_type_warning": "Warning",
+  "admin_broadcast_type_error": "Error",
+  "admin_clones_count": "{count} accounts",
+  "admin_btn_edit": "EDIT",
+  "admin_ban_device": "Ban Device",
+  "admin_unban_device": "Unban Device",
+  "admin_ban_device_confirm": "Are you sure you want to ban this device hardware ID? All accounts using this device will be blocked from logging in.",
+  "admin_unban_device_success": "Device hardware ID unbanned successfully",
+  "admin_ban_device_success": "Device hardware ID banned successfully",
+  "admin_device_banned_badge": "BANNED",
+  "error_session_terminated_admin": "Your session has been terminated by an administrator or another user of this account."
 }
