--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -425,5 +425,58 @@
   "settings_quick_game_mode": "Режим игры",
   "settings_quick_is_betting": "Игра на монеты",
   "settings_quick_bet_amount": "Ставка",
-  "settings_saved_success": "Настройки успешно сохранены!"
+  "settings_saved_success": "Настройки успешно сохранены!",
+  "settings_active_sessions": "Активные сессии",
+  "sessions_modal_title": "Активные сессии",
+  "session_current": "Текущая сессия",
+  "session_device": "Устройство",
+  "session_location": "Местоположение",
+  "session_ip": "IP адрес",
+  "session_last_active": "Последняя активность",
+  "session_terminate": "Завершить",
+  "session_confirm_terminate": "Вы уверены, что хотите завершить эту сессию?",
+  "error_session_terminate_too_new": "Новые сессии не могут завершать старые.",
+  "session_terminated_success": "Сессия успешно завершена",
+  "session_details_title": "Детали сессии",
+  "session_browser": "Браузер",
+  "session_os": "Система",
+  "session_created_at": "Вошел",
+  "admin_nav_devices": "Устройства",
+  "admin_user_sessions": "Сессии пользователя",
+  "admin_device_details": "Детали устройства",
+  "admin_device_model": "Модель",
+  "admin_platform_version": "Версия ОС",
+  "admin_is_mobile": "Мобильное",
+  "admin_login_count": "Входов",
+  "admin_first_seen": "Впервые",
+  "admin_last_seen": "Последний раз",
+  "admin_associated_users": "Связанные аккаунты",
+  "admin_terminate_session_confirm": "Вы уверены, что хотите принудительно завершить эту сессию?",
+  "admin_toast_session_terminated": "Сессия завершена",
+  "admin_view_sessions": "Сессии",
+  "admin_view_device": "Устройство",
+  "admin_mismatch_title": "Ой, а что это?",
+  "admin_mismatch_desc": "Вкладка '{tab}' пока не реализована или находится в разработке.",
+  "admin_btn_take_home": "Вернуться на главную",
+  "admin_modal_title": "Админ-панель",
+  "admin_clones_title": "Мультиаккаунты",
+  "admin_clones_subtitle": "Список устройств, на которых зарегистрировано более одного аккаунта.",
+  "admin_btn_details": "ДЕТАЛИ",
+  "admin_btn_go_to_user": "ПЕРЕЙТИ",
+  "admin_clones_not_found": "Мультиаккаунты не обнаружены",
+  "admin_raw_user_agent": "СЫРОЙ USER-AGENT",
+  "admin_user_rating": "Рейтинг",
+  "admin_broadcast_type_info": "Инфо",
+  "admin_broadcast_type_success": "Успех",
+  "admin_broadcast_type_warning": "Внимание",
+  "admin_broadcast_type_error": "Ошибка",
+  "admin_clones_count": "{count} аккаунтов",
+  "admin_btn_edit": "ИЗМЕНИТЬ",
+  "admin_ban_device": "Забанить устройство",
+  "admin_unban_device": "Разбанить устройство",
+  "admin_ban_device_confirm": "Вы уверены, что хотите забанить ID этого устройства? Все аккаунты, использующие это устройство, будут заблокированы.",
+  "admin_unban_device_success": "ID устройства успешно разбанен",
+  "admin_ban_device_success": "ID устройства успешно забанен",
+  "admin_device_banned_badge": "ЗАБАНЕН",
+  "error_session_terminated_admin": "Ваша сессия была завершена администратором или другим пользователем этого аккаунта."
 }
