--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -425,5 +425,58 @@
   "settings_quick_game_mode": "Режим гри",
   "settings_quick_is_betting": "Гра на монети",
   "settings_quick_bet_amount": "Ставка",
-  "settings_saved_success": "Налаштування успішно збережено!"
+  "settings_saved_success": "Налаштування успішно збережено!",
+  "settings_active_sessions": "Активні сесії",
+  "sessions_modal_title": "Активні сесії",
+  "session_current": "Поточна сесія",
+  "session_device": "Пристрій",
+  "session_location": "Місцезнаходження",
+  "session_ip": "IP адреса",
+  "session_last_active": "Остання активність",
+  "session_terminate": "Завершити",
+  "session_confirm_terminate": "Ви впевнені, що хочете завершити цю сесію?",
+  "error_session_terminate_too_new": "Нові сесії не можуть завершувати старі.",
+  "session_terminated_success": "Сесію успішно завершено",
+  "session_details_title": "Деталі сесії",
+  "session_browser": "Браузер",
+  "session_os": "Система",
+  "session_created_at": "Вхід",
+  "admin_nav_devices": "Пристрої",
+  "admin_user_sessions": "Сесії користувача",
+  "admin_device_details": "Деталі пристрою",
+  "admin_device_model": "Модель",
+  "admin_platform_version": "Версія ОС",
+  "admin_is_mobile": "Мобільний",
+  "admin_login_count": "Входів",
+  "admin_first_seen": "Вперше",
+  "admin_last_seen": "Востаннє",
+  "admin_associated_users": "Пов'язані акаунти",
+  "admin_terminate_session_confirm": "Ви впевнені, що хочете примусово завершити цю сесію?",
+  "admin_toast_session_terminated": "Сесію завершено",
+  "admin_view_sessions": "Сесії",
+  "admin_view_device": "Пристрій",
+  "admin_mismatch_title": "Ой, а що це?",
+  "admin_mismatch_desc": "Вкладка '{tab}' поки не реалізована або знаходиться в розробці.",
+  "admin_btn_take_home": "Повернутися на головну",
+  "admin_modal_title": "Адмін-панель",
+  "admin_clones_title": "Мультиакаунти",
+  "admin_clones_subtitle": "Список пристроїв, на яких зареєстровано більше одного акаунта.",
+  "admin_btn_details": "ДЕТАЛІ",
+  "admin_btn_go_to_user": "ПЕРЕЙТИ",
+  "admin_clones_not_found": "Мультиакаунти не виявлені",
+  "admin_raw_user_agent": "СИРИЙ USER-AGENT",
+  "admin_user_rating": "Рейтинг",
+  "admin_broadcast_type_info": "Інфо",
+  "admin_broadcast_type_success": "Успіх",
+  "admin_broadcast_type_warning": "Увага",
+  "admin_broadcast_type_error": "Помилка",
+  "admin_clones_count": "{count} акаунтів",
+  "admin_btn_edit": "ЗМІНИТИ",
+  "admin_ban_device": "Забанити пристрій",
+  "admin_unban_device": "Розбанити пристрій",
+  "admin_ban_device_confirm": "Ви впевнені, що хочете забанити ID цього пристрою? Усі акаунти, що використовують цей пристрій, будуть заблоковані.",
+  "admin_unban_device_success": "ID пристрою успішно розбанений",
+  "admin_ban_device_success": "ID пристрою успішно забанений",
+  "admin_device_banned_badge": "ЗАБАНЕНИЙ",
+  "error_session_terminated_admin": "Ваш сеанс був завершений адміністратором або іншим користувачем цього акаунта."
 }
