feat(inbox): comprehensive enhancements and session protection
- Implemented real-time inbox updates via Socket.IO.
- Added 'Not me' (session termination) action to login alerts.
- Implemented session age protection: newer sessions cannot terminate older ones.
- Added protection against self-termination from the inbox interface.
- Improved UI: buttons persist after reading until action, added action result labels.
- Fixed toast z-index to appear over modals.
- Added error handling and localized error messages for inbox actions.
- Forced full page reload on session termination event.
- Fixed potential backend crash in inbox routes.
- Version bump to 4.0.0-pre-RC.5.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -304,6 +304,11 @@
   "admin_nav_system": "Server State",
   "admin_nav_audit": "Audit Log",
   "admin_nav_maintenance": "Maintenance",
+  "admin_nav_inbox": "Admin Inbox",
+  "admin_inbox_error_message_required": "Please enter a message.",
+  "admin_inbox_error_user_required": "Please enter a user ID.",
+  "admin_inbox_success_sent": "Message sent successfully!",
+  "admin_inbox_error_failed": "Failed to send message.",
   "admin_nav_back_to_game": "Back to Game",
   "admin_dashboard_title": "Control Panel",
   "admin_live_overview": "Live Overview",
@@ -441,8 +446,6 @@
   "session_details_title": "Session Details",
   "session_browser": "Browser",
   "session_os": "System",
-  "session_created_at": "Logged In",
-  "admin_nav_devices": "Devices",
   "admin_user_sessions": "User Sessions",
   "admin_device_details": "Device Details",
   "admin_device_model": "Model",
@@ -479,5 +482,27 @@
   "admin_unban_device_success": "Device hardware ID unbanned successfully",
   "admin_ban_device_success": "Device hardware ID banned successfully",
   "admin_device_banned_badge": "BANNED",
-  "error_session_terminated_admin": "Your session has been terminated by an administrator or another user of this account."
+  "error_session_terminated_admin": "Your session has been terminated by an administrator or another user of this account.",
+  "inbox": {
+    "title": "📥 Inbox",
+    "empty": "You have no messages.",
+    "btn_accept": "Accept",
+    "btn_decline": "Decline",
+    "btn_it_was_me": "It was me",
+    "btn_not_me": "Not me (Terminate session)",
+    "action_result_it_was_me": "Confirmed: It was you",
+    "action_result_terminated": "Session terminated",
+    "system_message": "System Message",
+    "friend_request_title": "Friend Request",
+    "friend_request_content": "User **{fromUsername}** wants to add you as a friend.",
+    "login_alert_title": "New Account Login",
+    "login_alert_content": "Login from IP: **{ip}** ({location}).\nDevice: {userAgent}",
+    "mark_all_read": "Mark all as read",
+    "prev_page": "Prev",
+    "next_page": "Next",
+    "page_info": "Page {current} of {total}",
+    "admin_message_title": "📢 Message from Administration",
+    "admin_message_content": "{text}",
+    "click_to_expand": "Click to read more..."
+  }
 }
