--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -303,6 +303,11 @@
   "admin_nav_system": "Состояние сервера",
   "admin_nav_audit": "Лог аудита",
   "admin_nav_maintenance": "Техработы",
+  "admin_nav_inbox": "Admin Inbox",
+  "admin_inbox_error_message_required": "Введите сообщение.",
+  "admin_inbox_error_user_required": "Введите ID пользователя.",
+  "admin_inbox_success_sent": "Сообщение отправлено!",
+  "admin_inbox_error_failed": "Ошибка отправки.",
   "admin_nav_back_to_game": "Вернуться в игру",
   "admin_dashboard_title": "Панель управления",
   "admin_live_overview": "Живой обзор",
@@ -478,5 +483,27 @@
   "admin_unban_device_success": "ID устройства успешно разбанен",
   "admin_ban_device_success": "ID устройства успешно забанен",
   "admin_device_banned_badge": "ЗАБАНЕН",
-  "error_session_terminated_admin": "Ваша сессия была завершена администратором или другим пользователем этого аккаунта."
+  "error_session_terminated_admin": "Ваша сессия была завершена администратором или другим пользователем этого аккаунта.",
+  "inbox": {
+    "title": "📥 Входящие",
+    "empty": "У вас нет сообщений.",
+    "btn_accept": "Принять",
+    "btn_decline": "Отклонить",
+    "btn_it_was_me": "Это я",
+    "btn_not_me": "Это не я (Завершить сессию)",
+    "action_result_it_was_me": "Подтверждено: Это были вы",
+    "action_result_terminated": "Сессия завершена",
+    "system_message": "Системное сообщение",
+    "friend_request_title": "Запрос в друзья",
+    "friend_request_content": "Пользователь **{fromUsername}** хочет добавить вас в друзья.",
+    "login_alert_title": "Новый вход в аккаунт",
+    "login_alert_content": "Выполнен вход с IP: **{ip}** ({location}).\nУстройство: {userAgent}",
+    "mark_all_read": "Прочитать все",
+    "prev_page": "Назад",
+    "next_page": "Вперед",
+    "page_info": "Страница {current} из {total}",
+    "admin_message_title": "📢 Сообщение от Администрации",
+    "admin_message_content": "{text}",
+    "click_to_expand": "Нажмите, чтобы прочитать полностью..."
+  }
 }
