--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -303,6 +303,11 @@
   "admin_nav_system": "Стан сервера",
   "admin_nav_audit": "Лог аудиту",
   "admin_nav_maintenance": "Техроботи",
+  "admin_nav_inbox": "Admin Inbox",
+  "admin_inbox_error_message_required": "Введіть повідомлення.",
+  "admin_inbox_error_user_required": "Введіть ID користувача.",
+  "admin_inbox_success_sent": "Повідомлення надіслано!",
+  "admin_inbox_error_failed": "Помилка відправки.",
   "admin_nav_back_to_game": "Повернутися у гру",
   "admin_dashboard_title": "Панель управління",
   "admin_live_overview": "Живий огляд",
@@ -478,5 +483,27 @@
   "admin_unban_device_success": "ID пристрою успішно розбанений",
   "admin_ban_device_success": "ID пристрою успішно забанений",
   "admin_device_banned_badge": "ЗАБАНЕНИЙ",
-  "error_session_terminated_admin": "Ваш сеанс був завершений адміністратором або іншим користувачем цього акаунта."
+  "error_session_terminated_admin": "Ваш сеанс був завершений адміністратором або іншим користувачем цього акаунта.",
+  "inbox": {
+    "title": "📥 Вхідні",
+    "empty": "У вас немає повідомлень.",
+    "btn_accept": "Прийняти",
+    "btn_decline": "Відхилити",
+    "btn_it_was_me": "Це я",
+    "btn_not_me": "Це не я (Завершити сесію)",
+    "action_result_it_was_me": "Підтверджено: Це були ви",
+    "action_result_terminated": "Сесію завершено",
+    "system_message": "Системне повідомлення",
+    "friend_request_title": "Запит у друзі",
+    "friend_request_content": "Користувач **{fromUsername}** хоче додати вас у друзі.",
+    "login_alert_title": "Новий вхід в акаунт",
+    "login_alert_content": "Виконано вхід з IP: **{ip}** ({location}).\nПристрій: {userAgent}",
+    "mark_all_read": "Прочитати все",
+    "prev_page": "Назад",
+    "next_page": "Вперед",
+    "page_info": "Сторінка {current} з {total}",
+    "admin_message_title": "📢 Повідомлення від Адміністрації",
+    "admin_message_content": "{text}",
+    "click_to_expand": "Натисніть, щоб прочитати повністю..."
+  }
 }
